Document view now displays document duration, in seconds.

--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -71,7 +71,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-1 text-right" style="padding-top: 20px;">
-          <span id="document_audio_controls"></span>
+          <div id="document_audio_controls"></div>
+          <div id="document_duration" style="font-size: 0.8em; margin-top: 0.5em;">
+            {{ document_duration }}s
+          </div>
         </div>
         <div class="col-md-11">
           <div style="border: 1px solid #C0C0C0; margin-top: 0.5em; margin-bottom: 0.5em;">
