--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -1,5 +1,9 @@
 {% extends "base_wordcloud.html" %}
 
+{% block title %}
+{{ document_audio_identifier }}
+{% endblock title %}
+
 {% block head_scripts %}
   <script>
     $(document).ready(function() {
@@ -122,7 +126,7 @@
         </div>
         <div class="col-md-11">
           <div style="border: 1px solid #C0C0C0; margin-top: 0.5em; margin-bottom: 0.5em;">
-            <div id="document_visualizer"></div>
+            <div id="document_visualizer" title="{{ document_audio_identifier }}"></div>
           </div>
         </div>
       </div>
