--- a/visualizer/templates/corpus_document_list.html
+++ b/visualizer/templates/corpus_document_list.html
@@ -8,7 +8,7 @@
 <div>
   {% for document in document_list %}
   <span class="document_link">
-    <a href="{% url 'document' corpus.id document.id %}">{{ document.id|stringformat:"04d" }}</a>
+    <a href="{% url 'document' corpus.id document.id %}">{{ document.audio_identifier }}</a>
   </span>
   {% endfor %}
 </div>
@@ -25,7 +25,7 @@
     </h5>
     {% for document in documenttopic.documents.all %}
     <span class="document_link">
-      <a href="{% url 'document' corpus.id document.id %}">{{ document.id|stringformat:"04d" }}</a>
+      <a href="{% url 'document' corpus.id document.id %}">{{ document.audio_identifier }}</a>
     </span>
     {% endfor %}
     </div>
