Can now export document labels in LORELEI Situation Frame JSON format

--- a/visualizer/templates/corpus_document_list.html
+++ b/visualizer/templates/corpus_document_list.html
@@ -33,4 +33,12 @@
 </div>
 {% endif %}
 
+<hr />
+
+<h4>
+  <a href="{% url 'lorelei_situation_frames_json' corpus.id %}">
+    Download Document Labels (LORELEI JSON format)
+  </a>
+</h4>
+
 {% endblock content %}
