Updated link text for exporting document topic labels

--- a/visualizer/templates/corpus_document_list.html
+++ b/visualizer/templates/corpus_document_list.html
@@ -37,7 +37,7 @@
 
 <h4>
   <a href="{% url 'lorelei_situation_frames_json' corpus.id %}">
-    Download Document Labels (LORELEI JSON format)
+    Download Document Topic Labels (LORELEI JSON format)
   </a>
 </h4>
 
