Added link from Corpus Wordcloud view to Corpus Document List view

--- a/visualizer/templates/corpus_wordcloud.html
+++ b/visualizer/templates/corpus_wordcloud.html
@@ -159,5 +159,11 @@
     <div class="termcloud_terms"></div>
   </div>
 
+  <hr />
+
+  <h4>
+    Go to <a href="{% url 'corpus_document_list' corpus.id %}">Document List</a>
+  </h4>
+
 
 {% endblock content %}
