Changed text box label from "Label" to "Word"

--- a/visualizer/templates/corpus_wordcloud.html
+++ b/visualizer/templates/corpus_wordcloud.html
@@ -105,7 +105,7 @@
             <span id="pt_snippets_audio_player"></span>
           </div>
           <div class="form-group">
-            <label for="term_label">Label</label>
+            <label for="term_label">Word</label>
             <input id="term_label"></input>
             <span id="term_label_feedback" class="glyphicon glyphicon-ok form-control-feedback"
                   style="display: none;" aria-hidden="true"></span>
