--- a/pronounce/templates/phrase.html
+++ b/pronounce/templates/phrase.html
@@ -26,6 +26,11 @@
     <div>
       {{ phrase.phrase_text }}
     </div>
+
+    <hr>
+
+    <button type="button" class="btn btn-primary" onclick="location.reload(true);">Restart speaking</button>
+
   </div>
 </body>
 </html>
