--- a/pronounce/templates/phrase.html
+++ b/pronounce/templates/phrase.html
@@ -23,9 +23,14 @@
 
     <hr>
 
-    <div>
+    <div style="font-size: 1.2em;">
       {{ phrase.phrase_text }}
     </div>
+    {% if phrase.transliteration %}
+    <div style="margin-top: 2em; font-style: italic;">
+      ( {{ phrase.transliteration }} )
+    </div>
+    {% endif %}
 
     <hr>
 
