Added transcription support for Documents

--- a/visualizer/templates/base_wordcloud.html
+++ b/visualizer/templates/base_wordcloud.html
@@ -24,6 +24,7 @@
 
   <script src="{% static "visualizer/jquery-1.11.1.min.js" %}"></script>
   <script src="{% static "visualizer/jquery-ui-1.10.4/js/jquery-ui-1.10.4.min.js" %}"></script>
+  <script src="{% static "visualizer/jquery.insert-at-caret.js" %}"></script>
   <script src="{% static "visualizer/bootstrap-3.3.7/js/bootstrap.js" %}"></script>
   <script src="{% static "visualizer/bootstrap-select-1.10.0/js/bootstrap-select.js" %}"></script>
   <script src="{% static "visualizer/underscore.js" %}"></script>
