Auto-rewind now happens on play instead of pause

--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -126,7 +126,7 @@
         }
         if (isEscape) {
           waveformVisualizer.playPause();
-          if (waveformVisualizer.wavesurfer.backend.isPaused()) {
+          if (!waveformVisualizer.wavesurfer.backend.isPaused()) {
             waveformVisualizer.wavesurfer.skip(-0.5);
           }
         }
