Updated SF descriptions for v2.8 of Appen guidelines

--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -281,12 +281,16 @@
       </tr>
       <tr>
         <td>
-          Elections and Politics
+          Elections, Politics, and Regime Change
         </td>
         <td>
           Any issue involving voting, including pre-election campaigns
-          and polls and post-election results, or other political
-          events.
+          and polls and post-election results, the replacement of one
+          administration or government by another, especially through
+          concerted political or military action, including the direct
+          lead up to regime change (e.g. a coup) or direct aftermath
+          of regime change (e.g. arrest of former leaders), or other
+          political events.
         </td>
       </tr>
       <tr>
@@ -294,8 +298,10 @@
           Evacuation
         </td>
         <td>
-          Any issue involving the evacuation of people from a specific
-          danger zone.
+          Any situation involving the need for evacuation of people
+          from a specific danger zone. Evacuation can be from a
+          broadly defined place (a village or region) or from a more
+          precise location (building, subway car, etc.).
         </td>
       </tr>
       <tr>
@@ -303,8 +309,8 @@
           Food Supply
         </td>
         <td>
-          Any issue involving food supply, including lack of food/food
-          sources.
+          Any situation involving food supply, including shortage or
+          lack of food/food sources or contamination of food supplies.
         </td>
       </tr>
       <tr>
@@ -312,10 +318,10 @@
           Infrastructure
         </td>
         <td>
-          Any issue involving buildings (schools, government offices,
-          factories, places of worship, etc), transportation
-          infrastructure (roads, train lines, bridges, etc) or other
-          civil or community infrastructure damaged or not
+          Any situation involving public buildings (schools, offices,
+          factories, places of worship, etc.), transportation
+          infrastructure (roads, train lines, bridges, etc.) or other
+          civil or community infrastructure that is damaged or not
           operational.
         </td>
       </tr>
@@ -324,8 +330,22 @@
           Medical Assistance
         </td>
         <td>
-          Any issue involving disease or injury requiring or
-          suggesting the need for medical assistance.
+          Any situation involving disease, injury or other condition
+          requiring or suggesting the need for medical assistance.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Search/Rescue
+        </td>
+        <td>
+          Any situation involving an urgent need for emergency aid to
+          remove potentially living persons from immediate peril,
+          including situations in which those in need of rescue are
+          missing/trapped and must be located. Search and recovery
+          operations exclusively focusing on persons known to be
+          deceased are not considered search/rescue and should not be
+          tagged.
         </td>
       </tr>
       <tr>
@@ -333,8 +353,9 @@
           Shelter
         </td>
         <td>
-          Any issue involving the availability of shelter, including
-          destruction of homes, unsafe shelter conditions, etc.
+          Any situation involving the availability of shelter,
+          including destruction of homes, unsafe shelter conditions,
+          etc., whether temporary or permanent.
         </td>
       </tr>
       <tr>
@@ -348,23 +369,16 @@
       </tr>
       <tr>
         <td>
-          Urgent Rescue
-        </td>
-        <td>
-          Any issue involving an urgent need for emergency aid to
-          remove individuals or groups from immediate peril.
-        </td>
-      </tr>
-      <tr>
-        <td>
           Utilities, Energy, or Sanitation
         </td>
         <td>
-          Any issue involving utilities/services interrupted or
+          Any situation involving utilities/services interrupted or
           restored. This includes issues involving facilities that
           supply utilities, energy or sanitation; it also includes
-          issues/needs regarding electricity or disruption, lack of
-          waste removal, sewage problems, etc.
+          issues/needs regarding electricity or fuel supplies, power
+          outages, communication networks including phone and
+          internet, sanitation disruption, lack of waste removal,
+          sewage problems, etc.
         </td>
       </tr>
       <tr>
@@ -372,11 +386,12 @@
           Water Supply
         </td>
         <td>
-          Any issue involving water supply, including lack of water,
-          contamination of water, etc. This type includes issues
-          involving dietary water and agricultural water, but it does
-          not include things like flash floods (unless the flood
-          affects the supply of dietary or agricultural water).
+          Any situation involving water supply, including lack of
+          water, contamination of water, etc. This type includes
+          issues involving dietary water and agricultural water, but
+          it does not include things like flash floods or typhoons
+          (unless that event affects the supply of dietary or
+          agricultural water).
         </td>
       </tr>
     </table>
