Added 'description' field to DocumentTopic model

--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -104,7 +104,7 @@
                                    .css('margin-left', '1em')
                                    .css('margin-right', '1em')
                                    .css('margin-bottom', '0.2em')
-                                   .text(document_topics[dt_id].label);
+                                   .text(document_topics[dt_id].description);
           if (document_topics[dt_id]['selected']) {
             dt_button.addClass('active btn-primary');
           }
