--- a/visualizer/templates/document.html
+++ b/visualizer/templates/document.html
@@ -153,7 +153,7 @@
             </div>
 
             <div class="form-group">
-              <label for="sort_key_select">Sort (<span id="sort_direction" class="glyphicon glyphicon-arrow-up"></span>):</label>
+              <label for="sort_key_select">Sort (<span id="sort_direction" class="glyphicon glyphicon-arrow-down"></span>):</label>
               <select id="sort_key_select" class="selectpicker" data-width="fit" data-style="btn-default btn-xs">
               </select>
             </div>
